--- a/todo
+++ b/todo
@@ -1,4 +1,33 @@
-# 走梯子
-# 一次下载过多的图片导致软件崩溃
-# Windows 不信任打开提示
-# 
+#(待测试) issue 通过系统环境变量走梯子
+#(待测试) bug 一次下载过多的图片导致软件崩溃
+bug 桌面壁纸窗口偶尔会出现在icon上方，检查主窗口在关闭和最小化时的逻辑
+bug 指定输出画册没有生效，后端相关逻辑没有跑
+bug 画廊中会存在卡死的下载，找到原因
+bug 在删除一个之后，加载更多只会加载一个而不会加载下一页的量。说明加载更多的逻辑是保存了页数，
+    而不是直接加载更多。但不知道页数信息有什么重要的。
+bug windows 原生淡入淡出未实现（第一版的时候实现了，理论上可行）
+bug 不应该在运行一个任务时，不允许运行下一个任务
+bug local模式的插件没有成功打包，或者没有成功复制，需要找到原因
+bug? 下载时按照哈希去重似乎没有工作，需要确认
+
+issue 设置页面的UI不好看，应该靠中间，而非靠两边挤
+issue 去重不应该阻塞到下载结束
+issue Windows 的图片软件在打开图片时提示不信任
+
+optimize 主页画廊虚拟滚动
+optimize 切换模式的时候，应该尽量保留transition设置（具体方法有待确认）
+optimize 将图片主码设置为自增的数字
+
+feat 添加快捷键窗口
+feat 添加截图功能
+feat 为windows注册kgpg文件关联
+feat 添加命令行调用（运行爬虫，传入参数）（供 sharex 等截图工具调用）
+feat 添加导入插件的命令行调用
+feat 添加托盘操作：切换轮播状态、切换壁纸、切换画册
+feat 导出画册为文件夹
+feat 导出轮播画册为 wallpaper engine 工程，style和transition可以在工程中设置
+feat 支持 Macos
+feat 支持 Android
+
+refactor 将 download_image 写成同步调用，将队列直接去掉，只剩下一个正在运行的窗口
+refactor 将prisma迁移添加到程序启动进程中
