--- a/todo
+++ b/todo
@@ -1,25 +1,24 @@
-#(待测试) issue 通过系统环境变量走梯子
+# bug (待测试) 通过系统环境变量走梯子
 # bug 一次下载过多的图片导致软件崩溃（通过download_image的重构来解决）
-#(待充分测试) bug 桌面壁纸窗口偶尔会出现在icon上方，检查主窗口在关闭和最小化时的逻辑
+# bug (待充分测试) 桌面壁纸窗口偶尔会出现在icon上方，检查主窗口在关闭和最小化时的逻辑
 # bug 指定输出画册没有生效，后端相关逻辑没有跑
-bug 画廊中会存在卡死的下载，找到原因
+bug (复现路径不明) 画廊中会存在卡死的下载，找到原因
 bug 在删除一个之后，加载更多只会加载一个而不会加载下一页的量。说明加载更多的逻辑是保存了页数，
     而不是直接加载更多。但不知道页数信息有什么重要的。(似乎是因为分页本质上是后端通过sql进行的，通过页数和每页数量来计算的)
 bug windows 原生淡入淡出未实现（第一版的时候实现了，理论上可行）
 # bug 不应该在运行一个任务时，不允许运行下一个任务
 bug local模式的插件没有成功打包，或者没有成功复制，需要找到原因
-bug? 下载时按照哈希去重似乎没有工作，需要确认
+# bug 下载时按照哈希去重没有工作
 
 # issue 设置页面的UI不好看，应该靠中间，而非靠两边挤
 # issue 去重不应该阻塞到下载结束
-#(待测试) issue Windows 的图片软件在打开图片时提示不信任
+# issue (待测试) Windows 的图片软件在打开图片时提示不信任
 
 optimize 主页画廊虚拟滚动
 optimize 切换模式的时候，应该尽量保留transition设置（具体方法有待确认）
 optimize 将图片主码设置为自增的数字
 
 feat 添加快捷键窗口
-#(去掉) feat 可以通过任务过滤画廊里的画
 feat 添加截图功能
 feat 支持下载压缩包以及解压缩
 feat? 输出画册做成多选
