--- a/todo
+++ b/todo
@@ -1,24 +1,35 @@
 # bug (待测试) 通过系统环境变量走梯子
 # bug 一次下载过多的图片导致软件崩溃（通过download_image的重构来解决）
-# bug (待充分测试) 桌面壁纸窗口偶尔会出现在icon上方，检查主窗口在关闭和最小化时的逻辑
+# bug 桌面壁纸窗口偶尔会出现在icon上方，检查主窗口在关闭和最小化时的逻辑
 # bug 指定输出画册没有生效，后端相关逻辑没有跑
-bug (复现路径不明) 画廊中会存在卡死的下载，找到原因
-bug 在删除一个之后，加载更多只会加载一个而不会加载下一页的量。说明加载更多的逻辑是保存了页数，
-    而不是直接加载更多。但不知道页数信息有什么重要的。(似乎是因为分页本质上是后端通过sql进行的，通过页数和每页数量来计算的)
+# bug 画廊中会存在卡死的下载，找到原因
+# bug (修复计划延后) 在删除一个之后，加载更多只会加载一个而不会加载下一页的量。说明加载更多的逻辑是保存了页数，
+    # 而不是直接加载更多。但不知道页数信息有什么重要的。(似乎是因为分页本质上是后端通过sql进行的，通过页数和每页数量来计算的)
 bug windows 原生淡入淡出未实现（第一版的时候实现了，理论上可行）
 # bug 不应该在运行一个任务时，不允许运行下一个任务
 bug local模式的插件没有成功打包，或者没有成功复制，需要找到原因
 # bug 下载时按照哈希去重没有工作
+bug 画廊删除图片之后，直接重新刷新了
+bug 有时设置后自动重置为默认值
+bug 设置并发量后，一打开任务抽屉就恢复为默认值
 
 # issue 设置页面的UI不好看，应该靠中间，而非靠两边挤
 # issue 去重不应该阻塞到下载结束
-# issue (待测试) Windows 的图片软件在打开图片时提示不信任
+# issue Windows 的图片软件在打开图片时提示不信任
 
-optimize 主页画廊虚拟滚动
+# optimize (暂时放弃) 主页画廊虚拟滚动
 optimize 切换模式的时候，应该尽量保留transition设置（具体方法有待确认）
 optimize 将图片主码设置为自增的数字
+optimize 在多选情况下可以双击打开预览图，所以单击在多选情况下有一个小时延，判断是否是双击
+optimize 预览图可以通过delete和del来快速删除
+optimize 导入文件夹的时候勾选为每个文件夹创建一个画册
+optimize 将导入文件夹和导入文件合并为一个导入插件
 
+feat download_image支持压缩文件，增加一个中间态：正在解压缩。解压缩到临时文件夹后，自身结束，递归临时文件夹对每个图片文件进行单文件导入的操作（任务id不变）
+    因此支持用户拖入压缩文件，并在前端显示压缩文件将解压缩并自动加入图片
+feat 添加画廊和画册的排序（按照时间前后、按照名称排序、随机排序。排序不可逆，是一个入库的操作）
 feat 添加快捷键窗口
+feat 在源页面的导入弹窗中拖入kgpg文件进行导入
 feat 添加截图功能
 feat 支持下载压缩包以及解压缩
 feat? 输出画册做成多选
@@ -35,3 +46,5 @@ feat 支持多设备共享数据（无服务器，通过手动操作主动进行
 
 # refactor 将 download_image 写成同步调用，将队列直接去掉，只剩下一个正在运行的窗口
 refactor 迁移到 sea-orm
+refactor 重构kgpg格式，使得能够不拉取全量数据就能够获取其中的部分信息比如图标、文档等。
+    - optional 在下载时可以选择只下载代码部分。
