--- a/todo
+++ b/todo
@@ -7,20 +7,20 @@
     # 而不是直接加载更多。但不知道页数信息有什么重要的。(似乎是因为分页本质上是后端通过sql进行的，通过页数和每页数量来计算的)
 bug windows 原生淡入淡出未实现（第一版的时候实现了，理论上可行）
 # bug 不应该在运行一个任务时，不允许运行下一个任务
-bug local模式的插件没有成功打包，或者没有成功复制，需要找到原因
+# bug local模式的插件没有成功打包，或者没有成功复制，需要找到原因
 # bug 下载时按照哈希去重没有工作
-bug 画廊删除图片之后，直接重新刷新了
+# bug 画廊删除图片之后，直接重新刷新了
 bug 有时设置后自动重置为默认值
-bug 设置并发量后，一打开任务抽屉就恢复为默认值
+#bug 设置并发量后，一打开任务抽屉就恢复为默认值
 
 # issue 设置页面的UI不好看，应该靠中间，而非靠两边挤
 # issue 去重不应该阻塞到下载结束
 # issue Windows 的图片软件在打开图片时提示不信任
 
-# optimize (暂时放弃) 主页画廊虚拟滚动
+# optimize 主页画廊虚拟滚动 (已撑住百万数据量，以及万张图的流畅滚动)
 optimize 切换模式的时候，应该尽量保留transition设置（具体方法有待确认）
-optimize 将图片主码设置为自增的数字
-optimize 在多选情况下可以双击打开预览图，所以单击在多选情况下有一个小时延，判断是否是双击
+optimize 将图片主码设置为数字id
+# optimize 在多选情况下可以双击打开预览图，所以单击在多选情况下有一个小时延，判断是否是双击
 optimize 预览图可以通过delete和del来快速删除
 optimize 导入文件夹的时候勾选为每个文件夹创建一个画册
 optimize 将导入文件夹和导入文件合并为一个导入插件
