--- a/todo
+++ b/todo
@@ -15,7 +15,7 @@ bug 在任务详情不能打开图片所在文件夹、不能复制图片
 # bug 画廊删除图片之后，直接重新刷新了
 # bug （和并发有关，可能需要迁移到更稳定的键值数据库）有时设置后自动重置为默认值
 # bug 设置并发量后，一打开任务抽屉就恢复为默认值
-bug 画册页面重命名重复名称报错为 undefined
+# bug 画册页面重命名重复名称报错为 undefined
 
 # issue 设置页面的UI不好看，应该靠中间，而非靠两边挤
 # issue 去重不应该阻塞到下载结束
@@ -30,7 +30,7 @@ bug 画册页面重命名重复名称报错为 undefined
 # optimize 将导入文件夹和导入文件合并为一个导入插件
 # optimize 将生成的index.json中代入包版本（v1,v2），这样后端就不用兼容解析
 
-feat download_image支持压缩文件
+# feat 新增download_archive支持压缩文件
 # feat 支持用户拖入压缩文件，并在前端显示压缩文件将解压缩并自动加入图片
 feat 添加画廊和画册的排序（按照时间前后、按照名称排序、随机排序。排序不可逆，是一个入库的操作）
 feat 添加快捷键窗口
@@ -47,12 +47,11 @@ feat 导出轮播画册为 wallpaper engine 工程，style和transition可以在
 feat 支持多设备共享数据（无服务器，通过手动操作主动进行）
 # feat 插件编辑器，用vscode编辑器引擎
 feat 每日爬图统计功能 
-feat 
 feat! 支持 Macos
 feat! 支持 Linux
 feat!! 支持 Android
-feat!! 支持 iOS
-feat!!! 支持微信小程序
+feat!! 支持 iOS（提供有限的壁纸功能）
+feat!!! 支持微信小程序（放弃壁纸功能，仅提供图片浏览服务）
 feat!!!!! 支持HarmonyOS
 
 # refactor 将 download_image 写成同步调用，将队列直接去掉，只剩下一个正在运行的窗口
